# claude-learning-lab

./: .cspell.json  .gitignore  README.md  api_monitor.md  pyproject.toml
api-monitor/: config.yaml  notes.md
api-monitor/api_monitor/: monitor.py
api_monitor/: alerts.py  cli.py  config.py  logger.py
book-to-slide/: instruction.md
claude_code/: note.md
copilot/: note.md
styles/: linkedin_post_style.md  slides.md  style.md  style_technical.md
techniques/: autonomous_agent.md  front-end-stack.md  multi-file-architecture.md  reusable-prompts.md  single-file-task.md
tests/: test_alerts.py  test_config.py  test_monitor.py
