[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-monitor"
version = "0.1.0"
description = "CLI tool to monitor REST API uptime, response time, and error rates"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
api-monitor = "api_monitor.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
